app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --font-sans: var(--font-inter-sans);
  --font-serif: var(--font-poly-serif);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-foreground-secondary: var(--foreground-secondary);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-accent-step-1: var(--accent-step-1);
  --color-accent-step-2: var(--accent-step-2);
  --color-accent-border: var(--accent-border);
  --color-accent-black: var(--accent-black);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --breakpoint-xl: 90rem; /* 1440 px */
  --breakpoint-lg: 64rem; /* 1024 px */
  --breakpoint-sm: 32rem; /* 512 px */

  --text-3xl: 8rem;          /* 128 px */
  --text-2xl: 4.25rem;       /*  68 px */
  --text-xl: 3rem;           /*  48 px */
  --text-xl-minus: 2.25rem;   /* 36 px */
  --text-lg-plus-plus: 1.875rem;   /* 30 px */
  --text-lg-plus: 1.625rem;   /* 26 px */
  --text-lg: 1.5rem;          /* 24 px */
  --text-lg-minus: 1.25rem;   /* 24 px */
  --text-base-plus: 1.375rem; /* 22 px */
  --text-base: 1.125rem;      /* 18 px */   
  --text-sm: 1rem;            /* 16 px */

  --leading-tight: 1.1;
}

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0 0 0); /* headers */
  --foreground-secondary: oklch(0.4832 0 0); /* texts */
  --card: oklch(1 0 0);
  --card-foreground: oklch(0 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0 0 0);
  --primary: oklch(0 0 0);
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.8767 0 0 / 29%);
  --secondary-foreground: oklch(0 0 0); /* buttons */
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.971 0.025 78.9);
  --accent-step-1: oklch(0.63 0.21 36);
  --accent-step-2: oklch(0.73 0.165 65);
  --accent-border: oklch(0.88 0.025 78.9);
  --accent-black: oklch(0.14 0.075 65);
  --accent-foreground: oklch(0 0 0);
  --destructive: oklch(0.63 0.2425 36);
  --border: oklch(0.8925 0 0);
  --input: oklch(0.8925 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground-secondary flex flex-col min-h-svh mt-0;
  }
  main {
    @apply w-full flex flex-col max-w-screen-xl mx-auto;
  }
  article {
    @apply flex px-4 sm:px-10 lg:px-25 flex-col space-y-27.5 lg:space-y-75 ;
  }
  footer, header {
    @apply flex flex-row px-6.25 pt-0 lg:px-25 lg:pt-0;
  }
  header {
   @apply py-4 
  }
}

@layer typography {
  h1,h2,h3 {
    @apply leading-tight font-serif text-foreground -translate-x-[0.0625em];
  }
  h1 {
    @apply text-xl sm:text-2xl;
  }
  h2 {
    @apply text-xl-minus sm:text-xl mb-2.5;
  }
  h3 {
    @apply text-lg-plus-plus sm:text-lg mb-2.5;
  }
  h4 {
    @apply text-foreground font-medium text-lg-minus
  }
}

